# temperature

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  tasks.py
