[tool.poetry]
name = "temperature"
version = "0.1.0"
description = ""
authors = ["Larisa Shigareva <thelarisa81@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
celery = "^5.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
